Add CSS var for space block height

--- a/src/less/_css_vars.less
+++ b/src/less/_css_vars.less
@@ -3,14 +3,18 @@
 | ----------------------------------------------------------------------------*/
 
 :root {
+    /* Sections */
     --section-padding: 50px 0;
     --section-container-width: 80%;
     --section-container-max-width: 1200px;
+    --spacer-height: 100px;
 
+    /* Content */
+    --space-block-height: 10px;
+
+    /* Gaps */
     --row-gap: 20px;
     --grid-gap: 20px;
-    
-    --spacer-height: 100px;
 
     /* Aesthetic */
     --overlay-background-color: rgba(0, 0, 0, 0.6);
