flex: add flex-column class

--- a/src/less/_flex.less
+++ b/src/less/_flex.less
@@ -4,6 +4,7 @@
 
 [class*='flex'] {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 
     .col-flex {
@@ -33,6 +34,10 @@
             width: 100%;
         }
     }
+}
+
+.flex-column {
+    flex-direction: column;
 }
 
 .flex-nowrap {
