--- a/src/less/_grid.less
+++ b/src/less/_grid.less
@@ -7,7 +7,7 @@
     gap: var(--grid-gap);
     grid-template-columns: repeat(12, 1fr);
 
-    .col-1 {
+    .col-1-1 {
         grid-column: auto / span 12;
     }
     .col-1-2 {
